# org-archivist

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  FRONTEND_PREP_SUMMARY.md  PHASE_4_COMPLETION_HANDOFF.md  PHASE_4_TESTING_REVIEW_REPORT.md  POSTGRESQL_MIGRATION_SUMMARY.md  README.md  TESTING_PLAN_ML_DEPS_REMOVAL.md  TEST_AUTH_FIX_VERIFICATION.md  TEST_RESULTS_API_INTEGRATION.md  TEST_RESULTS_DATABASE_INTEGRATION.md  TEST_RESULTS_E2E.md  TEST_RESULTS_ML_DEPS_REMOVAL.md  TEST_RESULTS_OUTPUT_MODELS.md  TEST_RESULTS_PHASE4_COVERAGE.md  TEST_RESULTS_SUCCESS_TRACKING.md  TEST_RESULTS_WRITING_STYLES.md  docker-compose.dev.yml  docker-compose.yml  env.example  frontend-readiness.md  pytest.ini
backend/: .dockerignore  .gitignore  ALEMBIC_SETUP_COMPLETE.md  CLAUDE_API_INTEGRATION.md  Dockerfile  Dockerfile.dev  EMBEDDING_GENERATION_IMPLEMENTATION.md  README.md  alembic.ini  benchmark_retrieval_engine.py  pyproject.toml  pytest.ini  requirements.txt  temp.txt  test_all_extractors.py  test_chunking_service.py  test_chunking_simple.py  test_generation_service.py  test_pdf_extractor.py  test_recency_weighting.py  test_reranking.py  test_retrieval_structure.py  test_vector_search_integration.py  test_vector_store.py
backend/alembic/: README.md  env.py
backend/app/: __init__.py  config.py  dependencies.py  main.py  middleware.py
backend/docs/: document-processor-testing.md  document-upload-integration.md  e2e-testing-implementation.md  metadata-extraction-implementation.md  reranking-implementation.md  semantic-chunking-implementation.md
backend/tests/: README.md  README_DOCUMENT_PROCESSOR_TESTS.md  README_E2E_TESTS.md  (+22 more)
(+242 files in other folders)
